--- a/docker/nginx.site.conf
+++ b/docker/nginx.site.conf
@@ -2,6 +2,8 @@ server {
     listen 8000 default;
     server_name *.push.al *.ilhasoft.mobi *.ilhasoft.dev;
 
+    client_max_body_size 32M;
+
     # location = /favicon.ico { access_log off; log_not_found off; }
     location /sitestatic/ {
         root $PROJECT_PATH;
