--- a/docker/nginx.site.conf
+++ b/docker/nginx.site.conf
@@ -3,6 +3,7 @@ server {
     server_name *.push.al *.ilhasoft.mobi *.ilhasoft.dev;
 
     client_max_body_size 32M;
+    proxy_read_timeout 100;
 
     # location = /favicon.ico { access_log off; log_not_found off; }
     location /sitestatic/ {
