--- a/docker/nginx.site.conf
+++ b/docker/nginx.site.conf
@@ -13,5 +13,6 @@ server {
     location / {
         include /etc/nginx/proxy_params;
         proxy_pass http://unix:${PROJECT_CONF}/gunicorn.sock;
+				proxy_set_header X-Forwarded-Proto $scheme;
     }
 }
