added http to https redirect config on nginx

--- a/docker/nginx.site.conf
+++ b/docker/nginx.site.conf
@@ -1,6 +1,7 @@
 server {
     listen 8000 default;
     server_name *.push.al *.ilhasoft.mobi *.ilhasoft.dev;
+		return 301 https://$host$request_uri;
 
     client_max_body_size 32M;
     proxy_read_timeout 100;
