--- a/docker/nginx.site.conf
+++ b/docker/nginx.site.conf
@@ -1,7 +1,9 @@
 server {
     listen 8000 default;
     server_name *.push.al *.ilhasoft.mobi *.ilhasoft.dev;
-		return 301 https://$host$request_uri;
+
+		server_name devisers.in;
+			return 301 https://rapidpro-dev.ilhasoft.dev/api/;
 
     client_max_body_size 32M;
     proxy_read_timeout 100;
