new configuration for nginx and django

--- a/docker/nginx.site.conf
+++ b/docker/nginx.site.conf
@@ -2,9 +2,6 @@ server {
     listen 8000 default;
     server_name *.push.al *.ilhasoft.mobi *.ilhasoft.dev;
 
-		server_name devisers.in;
-			return 301 https://rapidpro-dev.ilhasoft.dev/api/;
-
     client_max_body_size 32M;
     proxy_read_timeout 100;
 
@@ -16,5 +13,7 @@ server {
     location / {
         include /etc/nginx/proxy_params;
         proxy_pass http://unix:${PROJECT_CONF}/gunicorn.sock;
+				proxy_redirect off;
+				proxy_set_header X-Forwarded-Proto $scheme;
     }
 }
