test nginx new redirect config

--- a/docker/nginx.site.conf
+++ b/docker/nginx.site.conf
@@ -1,7 +1,8 @@
 server {
     listen 8000 default;
+    listen [::]:8000 default_server;
     server_name *.push.al *.ilhasoft.mobi *.ilhasoft.dev;
-		rewrite ^ https://$host$request_uri? permanent;
+    return 301 https://$host$request_uri;
 
     client_max_body_size 32M;
     proxy_read_timeout 100;
