test nginx set http_header config

--- a/docker/nginx.site.conf
+++ b/docker/nginx.site.conf
@@ -1,8 +1,6 @@
 server {
     listen 8000 default;
-    listen [::]:8000 default_server;
     server_name *.push.al *.ilhasoft.mobi *.ilhasoft.dev;
-    return 301 https://$host$request_uri;
 
     client_max_body_size 32M;
     proxy_read_timeout 100;
@@ -15,5 +13,6 @@ server {
     location / {
         include /etc/nginx/proxy_params;
         proxy_pass http://unix:${PROJECT_CONF}/gunicorn.sock;
+				proxy_set_header Host $http_host;
     }
 }
