--- a/docker/nginx.site.conf
+++ b/docker/nginx.site.conf
@@ -14,4 +14,11 @@ server {
         include /etc/nginx/proxy_params;
         proxy_pass http://unix:${PROJECT_CONF}/gunicorn.sock;
     }
+
+		location /api/v2/ {
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header Host $http_host;
+        proxy_redirect off;
+				proxy_pass http://$host/api/v2/;
+		}
 }
