--- a/docker/nginx.site.conf
+++ b/docker/nginx.site.conf
@@ -16,9 +16,7 @@ server {
     }
 
 		location /api/v2/ {
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header Host $http_host;
-        proxy_redirect off;
-				proxy_pass http://$host/api/v2/;
+				proxy_pass http://127.0.0.1:8000/api/v2/;
 		}
 }
